rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_wrapper__wrapper_order_by_over_ungrouped_join_ungrouped.snap
---
source: cubesql/src/compile/test/test_wrapper.rs
expression: sql
---
SELECT 
  "a"."customer_gender" "customer_gender", "a"."amount_1" "amount_1"
  
FROM (
  SELECT 
    "a"."customer_gender" "customer_gender", "a"."amount" "amount", "b"."customer_gender" "customer_gender_1", "b"."amount" "amount_1"
    
  FROM (
    SELECT * FROM {
      "query": {
        "measures": [],
        "dimensions": [
          "KibanaSampleDataEcommerce.customer_gender",
          "KibanaSampleDataEcommerce.taxful_total_price"
        ],
        "segments": [],
        "order": [],
        "limit": 5000,
        "ungrouped": true
      },
      "meta": {
        "protocol": "postgres",
        "apiType": "sql",
        "appName": "NULL"
      },
      "member_to_alias": {
        "KibanaSampleDataEcommerce.customer_gender": "customer_gender",
        "KibanaSampleDataEcommerce.taxful_total_price": "amount"
      }
    }
  ) AS "a" 
  INNER JOIN (SELECT * FROM {
    "query": {
      "measures": [],
      "dimensions": [
        "KibanaSampleDataEcommerce.customer_gender",
        "KibanaSampleDataEcommerce.taxful_total_price"
      ],
      "segments": [],
      "order": [],
      "limit": 5000,
      "ungrouped": true
    },
    "meta": {
      "protocol": "postgres",
      "apiType": "sql",
      "appName": "NULL"
    },
    "member_to_alias": {
      "KibanaSampleDataEcommerce.customer_gender": "customer_gender",
      "KibanaSampleDataEcommerce.taxful_total_price": "amount"
    }
  }) AS "b" ON ("a"."customer_gender" = "b"."customer_gender")
) AS "a" 
ORDER BY "a"."amount_1" DESC NULLS FIRST 
LIMIT 50000
